--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
   , "dependencies": {
       "express": "3.0.0"
     , "jade": ">= 0.0.1"
-  }
+    },
+    "engines": {
+        "node": "x",
+        "npm": "x"
+    }
 }
