--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   , "dependencies": {
       "express": "3.0.0"
     , "jade": ">= 0.0.1"
+    , "request": "x"
     },
     "engines": {
         "node": "x",
