--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     , "jade": ">= 0.0.1"
     , "request": "x"
     , "gzippo": "x"
-    , "oauth": "x"
+    , "OAuth": "x"
     },
     "engines": {
         "node": "0.10.17",
