--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-    "name": "mattlovan"
-  , "version": "0.0.2"
-  , "private": true
-  , "dependencies": {
-      "express": "3.0.0"
-    , "jade": ">= 0.0.1"
-    , "request": "x"
-    , "gzippo": "x"
-    , "oauth": "x"
-    },
-    "engines": {
-        "node": "0.10.17",
-        "npm": "x"
-    }
+  "name": "mattlovan",
+  "version": "0.0.2",
+  "private": true,
+  "dependencies": {
+    "express": "3.0.0",
+    "jade": ">= 0.0.1",
+    "request": "x",
+    "gzippo": "x",
+    "oauth": "x"
+  },
+  "engines": {
+    "node": "0.10.17",
+    "npm": "x"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.1"
+  }
 }
